# storm

./: CMakeLists.txt  Cargo.toml  Dockerfile  README.md  run_linux_window_on_macos.sh  shell.nix
.github/workflows/: windows.yml
crates/storm/: Cargo.toml
crates/storm/src/: main.rs
crates/ui-framework/: Cargo.toml  build.rs
crates/ui-framework/src/: color.rs  geometry.rs  platform.rs  scene.rs  ui_framework.rs  window.rs
crates/ui-framework/src/platform/: error.rs
crates/ui-framework/src/platform/linux/: application.rs  mod.rs  vulkan_renderer.rs  window.rs
crates/ui-framework/src/platform/macos/: application.rs  metal_renderer.rs  mod.rs  shaders.metal  window.rs
crates/ui-framework/src/platform/windows/: application.rs  window.rs
include/: window.hpp
src/: main.cpp
src/platform/linux/: window.cpp
src/platform/macos/: window.mm
src/platform/windows/: window.cpp
