[package]
name = "ui-framework"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/ui_framework.rs"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cbindgen = { version = "0.27.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-foundation = "0.10.0"
objc = "0.2.7"
metal = "0.30.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21.0"
